--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@
 
 	body
 	{
-		background: #202020 url(images/img01.jpg) repeat;
+		background: #ffffff repeat;
 	}
 
 	body,input,textarea,select
